# ispan_project

./: .gitignore  AI_SCORING_GUIDE.md  ENV_SETUP.md  README.md  browser_test.html  chat_interface.html  check_user_state.py  client.py  cursor_mcp_config.json  cursor_mcp_config_fixed.json  env.example  fast_agent_bridge.py  fast_agent_interview.py  fastagent.config.yaml  fastagent.jsonl  http_wrapper.py  interview.py  main.py  mongodb_query.py  quick_test.py  requirements.txt  server.py  simple_auto_interview.py  start_integrated_system.py  test_ai_scoring.py  test_env.py  流程.txt
interview_csv/: algorithm1.csv  blockchain1.csv  css1.csv  data_science1.csv  data_science2.csv  data_structures1.csv  docker1.csv  javascripts1.csv  linux1.csv  mysql1.csv  postgres1.csv  python1.csv
tools/: __init__.py  ai_answer_analyzer.py  answer_analyzer.py  database.py  interactive_interview.py  interview_session.py  question_manager.py  ui_manager.py
virtual_interviewer/: FAY_INTEGRATION_API.md  POETRY_MIGRATION.md  README.md  UPDATE_LOG.md  app.py  dev.sh  fastagent.jsonl  pyproject.toml  run.py  start.sh
virtual_interviewer/static/css/: style.css
virtual_interviewer/static/js/: app.js  avatar.js  interview.js  resume.js
virtual_interviewer/templates/: base.html  browser_test.html  index.html  resume.html
